make.txt
g++ -std=c++17 -Wall -I include/Entities -Iinclude/Readers -Iinclude/Exporters -Isrc/Entities -Isrc/Exporters -Isrc/Readers -Ivendor -c -o obj/Entities/DatabaseEntry.o src/Entities/DatabaseEntry.cpp
g++ -std=c++17 -Wall -I include/Entities -Iinclude/Readers -Iinclude/Exporters -Isrc/Entities -Isrc/Exporters -Isrc/Readers -Ivendor -c -o obj/Entities/Entity.o src/Entities/Entity.cpp
src/Entities/Entity.cpp: In member function ‘std::string RedatamLib::Entity::ResolveDataFilename() const’:
src/Entities/Entity.cpp:16:51: error: cannot convert ‘const string’ {aka ‘const std::__cxx11::basic_string<char>’} to ‘const std::vector<std::__cxx11::basic_string<char> >&’
   16 |                                             this->IndexFilename);
      |                                             ~~~~~~^~~~~~~~~~~~~
      |                                                   |
      |                                                   const string {aka const std::__cxx11::basic_string<char>}
In file included from src/Entities/Entity.cpp:2:
include/Entities/RedatamDatabase.hpp:23:53: note:   initializing argument 2 of ‘std::vector<std::__cxx11::basic_string<char> > RedatamLib::RedatamDatabase::OptimisticCombine(const string&, const std::vector<std::__cxx11::basic_string<char> >&) const’
   23 |                     const std::vector<std::string> &paths) const;
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
make: *** [Makefile:16: obj/Entities/Entity.o] Error 1
